2006-04-07  Cedric Gustin  <cedric.gustin@gmail.com>

	* README.win32: Updated for gtkmm-2.8 (MS Visual Studio 2005).
	* MSVC_Net2003/*.vcproj: Updated for Visual Studio 2005. Added the
	/vd2 compiler flag (Bug #158040).
	* MSVC_Net2003/gtkmm.sln: Updated for Visual Studio 2005.
	* MSVC_Net2003/gendef/gendef.cc: Redirect output of dumpbin to a
	file.
	* build_shared/Makefile_build.am_fragment: Add -DGTKMM_BUILD to
	the extra_defines compiler flags (switch between
	dllexport/dllimport on win32).
	* gtk/src/treeviewcolumn.hg: Tag the TreeViewColumn class with
	GTKMM_API to avoid auto-import errors with gcc on
	mingw32/cygwin. Also inline some TreeViewColumn methods. Bug
	#309030 (Toralf Lund).
	* gtk/src/object.hg: Tag the Object class with GTKMM_API to make
	Visual Studio happy.

2006-04-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: fixed a few broken links in the jhbuild
	appendix

2006-03-31  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* tools/extra_defs_gen/generate_defs_gtk.cc: Added 
	GTK_TYPE_CELL_RENDERER_SPIN, GTK_TYPE_RECENT_CHOOSER, 
	GTK_TYPE_RECENT_CHOOSER_MENU, GTK_TYPE_RECENT_CHOOSER_WIDGET, 
	GTK_TYPE_RECENT_FILTER, GTK_TYPE_RECENT_MANAGER )
	* gtk/src/gtk_signals.defs: Added sections for the new types.


2006-03-28  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs_override.xml: Added override for 
	gtk_widget_render_icon(), because it mentioned unrefing the result.

2006-03-26  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/gdk_docs_override.xml: Override the documentation for 
	create_cairo_context because it mentions destroying the result, 
	and says that it is since 2.8 instead of 2.10.

2006-03-23  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/pixbufloader.hg: create(): Add documentation, based on 
	new C documentation.

2006-03-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/Makefile.am: Add style.css to EXTRA_DIST.