@@ -1,3 +1,8 @@
+2006-04-11  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/gtkmm/listviewtext.cc: Constructor: Use sprintf() instead of 
+	std::stringstream because it is smaller (code size) and faster.
+
 2006-04-07  Cedric Gustin  <cedric.gustin@gmail.com>
 
 	* README.win32: Updated for gtkmm-2.8 (MS Visual Studio 2005).
